# grounded-player-sim

./: .gitignore  README.md  TODO.md  pyproject.toml  setup.py
documents/: claim_evidence_map.md  design.md  ednet_protocol.md  g4_plan.md  milestone_a.md  milestone_g.md  paper.md  paper_draft.md  paper_outline.md  paper_outline.zh.md  paper_readiness_plan.md  proposal_v2.md  related_work.md  results_ec.md  summary.md  training.md
results/: conc_move_2017-04.json  conc_move_2019-07.json  concentration_variance_controlled.txt  ednet_replication.json  ednet_rt.txt  g3_llm.txt  g4_allie_static_vs_evolving.json  g4_allie_static_vs_evolving.txt  g4_timing.txt  g5_persona_ladder.json  g5_persona_ladder.txt  go_timing.txt  kt_memory_arm.json  kt_memory_arm.txt  kt_replication_fixed_loader.json  kt_replication_fixed_loader.txt  kt_static_arm.json  kt_static_arm.txt  memory_baseline.json  memory_baseline.txt  memory_gru_arm.json  memory_gru_arm.txt  move_concentration.txt  posaware_pooled.txt  rating_stratification.txt  real_kt.txt  real_kt_rt.txt  slime_rl_llm.txt  stable_speed_baseline.txt  stable_speed_extension.json  tier1_pooled.txt  timing_concentration.txt
scripts/: README.md  ednet_manifest.json  g3_hidden.py  g4_allie_static_vs_evolving.py  g4_cache_allie.py  g4_cache_maia.py  g4_run_allie.py  g4_run_timing.py  g5_persona_ladder.py  gen_manifest.py  kt_memory_arm.py  kt_replication_manifest.json  kt_static_arm.py  memory_gru_arm.py  memory_vs_learned.py  prepare_ednet.py  prepare_kt_data.py  prepare_kt_replications.py  prepare_stable_speed_cohorts.py  run_ednet_replication.py  run_kt_replication.py  run_stable_speed_replication.py  stable_speed_manifest.json  sweep.sbatch  sweep_cell.py  sweep_pool.py
tests/: test_board_native.py  test_bootstrap.py  test_chess_player.py  test_cli_kt.py  test_data_and_backbones.py  test_ec_experiment.py  test_ednet_replication.py  test_eval.py  test_g4_allie_static_vs_evolving.py  test_hidden_prefix.py  (+13 more)
(+127 files in other folders)
