[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grounded-player-sim"
version = "0.0.1"
description = "Dynamic latent-state injection on an LLM policy for personalized human game-play simulation (chess/Go)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "James Liu", email = "jnulliu@amazon.com" }]
keywords = [
    "human-modeling",
    "behavior-simulation",
    "chess",
    "go",
    "llm",
    "latent-state",
]

# Base install is intentionally light so the Phase-0 synthetic players and
# the eval harness run anywhere (incl. a CPU-only laptop). Everything that
# needs a GPU / network / external binary lives in an optional extra below.
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
# Local open-weight LLM serving (Qwen3-8B etc.) via sglang.
serve = [
    "sglang>=0.4",
    "transformers>=4.44",
    "torch>=2.3",
]
# Closed-source / hosted models behind an HTTP API.
api = [
    "openai>=1.40",
    "anthropic>=0.34",
]
# Training the latent injector (and optionally the backbone).
train = [
    "torch>=2.3",
    # slime is installed from source on the GPU host; pin there.
    # "slime",
]
# Chess data + engine oracle.
chess = [
    "python-chess>=1.999",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
gps = "gps.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 79
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B905: zip(strict=) is 3.10+ only; we keep the code runnable on 3.9 dev
# boxes and the zipped iterables here are constructed aligned by design.
ignore = ["B905"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
